fix gap between events

--- a/app/assets/tailwind/components/event_day.css
+++ b/app/assets/tailwind/components/event_day.css
@@ -43,7 +43,7 @@
     }
 
     .events-list {
-      @apply flex flex-col gap-4;
+      @apply flex flex-col gap-1;
     }
   }
 }
